--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,28 +1,20 @@
 .side-bar
   .header
     %h3.header__name
-      test-user
+      = current_user.name
     %ul.header__lists
       %li.list
-        = link_to '#' do
+        = link_to new_group_path do
           = fa_icon 'edit', class: 'icon'
       %li.list
-        = link_to '#' do
+        = link_to edit_user_path(current_user) do
           = fa_icon 'cog', class: 'icon'
       
   .groups
-    .group
-      .group__name
-        test-group
-      .group__message
-        さようなら
-    .group
-      .group__name
-        sample-group
-      .group__message
-        hello!
-    .group
-      .group__name
-        example
-      .group__message
-        まだメッセージがありません
+    - current_user.groups.each do |group|
+      .group
+        = link_to group_messages_path(group) do
+          .group__name
+            = group.name
+          .group__message
+            メッセージはまだありません。
