--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,16 +6,15 @@
     .header
       .left-header
         .left-header__title
-          test-group
+          = @group.name
         %ul.left-header__members
           Member：
           %li.member
-            佐立
-          %li.member
-            田中
+            - @group.group_users.each do |group_user|
+              = group_user.user.name
       .right-header
         .right-header__button
-          Edit
+          = link_to "Edit", edit_group_path(params[:group_id]), method: :get
 
     .messages
       = render @messages
